# website

./: .Rprofile  .gitignore  README.md  _quarto.yml  _quarto_internal_scss_error.scss  _redirects  about.qmd  ai.qmd  blog.qmd  blogroll.qmd  colophon.qmd  config.toml  fonts.css  imprint.qmd  index.qmd  japanese_gardens.qmd  netlify.toml  optimized_predictor.json  principles.qmd  privacy.qmd  projects.qmd  publications.qmd  pyproject.toml  requirements.txt  talks.qmd  theme-dark.scss  theme-light.scss  uses.qmd
_site/: _redirects  about.html  ai.html  blog.html  blog.xml  blogroll.html  colophon.html  imprint.html  index.html  index.xml  japanese_gardens.html  listings.json  principles.html  privacy.html  projects.html  publications.html  recommendations.html  robots.txt  search.json  sitemap.xml  styles.css  talks.html  uses.html
blog/a-philosophy-of-ai-coding/: index.qmd
blog/absa-os-llm/: index.qmd  main.py  try_outlines.py
blog/absa-with-dspy/: bibliography.bib  index.qmd
blog/abstractions/: index.qmd
blog/agent-benchmarks/: bibliography.bib  index.qmd
blog/agentic-ai/: index.qmd  levels.drawio  star-history-2025228.csv
blog/agentic-engineering/: index.qmd
blog/ai-assistants/: index.qmd
blog/connect-agent/: index.qmd
blog/constrained-generation/: .gitignore  index.qmd
blog/context-constrained/: index.qmd
content/: _index.md  impressum.md  imprint.md
public/: 404.html  index.html  index.xml  investment.html  main.min.ebeea774bd0288585efac7936c4997143f5f93209741bdc1e2efb2a12e19563d.js  sitemap.xml  style.main.min.333d00d4fb045e33475b4f61bb98e2b6c6cf04230a9640f819846403c0f414ad.css  style.main.min.3f51858d780df941710fbfed3b61bb64abe2e6e8b30a1dcd3d36151346526999.css  style.main.min.822f19bc0250cfff9fe0f8535d1ac0ece1fd50c2522987c3eb957941778e6e59.css  style.main.min.8a582583cb42d8ee4add6a139950b6aba360da1181bd74c5713b59ac9928ec9c.css  style.main.min.b31e9ccef65bdb523292bf5f72696dddf8baddb761b8a5cfdd882c42792b63d9.css  style.main.min.b5ce77537ff48100097040a722659a0bef169070635079e586b826778a2f8c33.css  style.main.min.cc94b744f3a314fa1a05b9eb5efd95abebd86bf22386b7990b0947b5bd4441a9.css  style.main.min.dfcd791e3b9fadfe7928d30ededeb965a8da816ed5a96170ee3335c478c2d140.css  style.main.min.f70fc78377a71014756eefca4c52500272bb089a9e4a4452f45b0656f8240429.css  style.main.min.fb3cdae474b4df6f7bd99ec02cede1979fdac14a3f41b5e9d8a049b17e9b87a3.css
(+477 files in other folders)
