[tool.poetry]
name = "website"
version = "0.1.0"
description = ""
authors = ["Paul Simmering <paul@simmering.dev>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11.5"
nbformat = "^5.9.2"
black = "^23.10.0"
polars = "^1.13.1"
ibis = "^3.2.0"
siuba = "^0.4.4"
duckdb = "^1.1.3"
yfinance = "^0.2.31"
nbclient = "^0.8.0"
ipykernel = "^6.25.2"
plotly = "^5.17.0"
scipy = "^1.11.3"
datasets = "^3.2.0"
transformers = {extras = ["torch"], version = "^4.34.1"}
torch = "^2.1.0"
scikit-learn = "^1.3.1"
modal = "^0.70.1"
wandb = "^0.18.7"
ipywidgets = "^8.1.1"
statsmodels = "^0.14.0"
pydantic = "^2.4.2"
texttunnel = "^0.3.3"
aiosqlite = "^0.19.0"
itables = "^1.6.3"
great-tables = "^0.14.0"
instructor = "^1.2.6"
seaborn = "^0.13.2"
openai = "^1.57.0"
dspy = "^2.5.32"
tabulate = "^0.9.0"
pydantic-ai = "^0.0.13"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
