[project]
name = "website"
version = "0.1.0"
description = ""
authors = [{name = "Paul Simmering", email = "paul@simmering.dev"}]
requires-python = "==3.13.11"
dependencies = [
    "nbformat>=5.9.2",
    "black>=23.10.0",
    "polars>=1.13.1",
    "nbclient>=0.8.0",
    "ipykernel>=6.25.2",
    "plotly>=5.17.0",
    "ipywidgets>=8.1.1",
    "pydantic>=2.4.2",
    "great-tables>=0.14.0",
]
